--- a/app/src/main/res/layout/fragment_attribute.xml
+++ b/app/src/main/res/layout/fragment_attribute.xml
@@ -5,8 +5,14 @@
     <data>
         <import type="android.text.Html"/>
         <variable
+            name="time"
+            type="String" />
+        <variable
             name="attribute"
             type="com.route.exam.detail.model.Attribute" />
+        <variable
+            name="group"
+            type="com.route.exam.detail.model.Data" />
         <variable
             name="seeMore"
             type="Boolean" />
@@ -21,39 +27,82 @@
         android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
             <ImageView
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@{attribute.averageRating>0?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                />
             <ImageView
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@{attribute.averageRating>1?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
+                android:layout_margin="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <ImageView
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@{attribute.averageRating>2?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
+                android:layout_margin="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <ImageView
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@{attribute.averageRating>3?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
+                android:layout_margin="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <ImageView
                 app:layout_constraintTop_toTopOf="parent"
                 android:src="@{attribute.averageRating>4?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
+                android:layout_margin="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+        <ImageView
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@{attribute.averageRating>5?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
+            android:layout_margin="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <ImageView
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@{attribute.averageRating>6?@drawable/ic_icon_review_score_star_selected:@drawable/ic_icon_review_score_star}"
+            android:layout_margin="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
         </LinearLayout>
         <TextView
             android:text="@{`Based on `+attribute.ratingCount+(attribute.ratingCount>0?` reviews`:` review`)}"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="Provided by: "
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tvLink"
+                android:textSize="16sp"
+                android:textColor="@color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_marginTop="28dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <androidx.constraintlayout.widget.Guideline
@@ -89,6 +138,9 @@
                     android:layout_height="@dimen/attribute_icon_size"/>
             <TextView
                 android:id="@+id/tvDistance"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/imgDistance"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/glV1"
@@ -107,9 +159,12 @@
             <TextView
                 android:id="@+id/tvTime"
                 app:layout_constraintTop_toBottomOf="@+id/imgTime"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintLeft_toRightOf="@+id/glV1"
                 app:layout_constraintRight_toLeftOf="@+id/glV2"
-                android:text="@{(attribute.elevationMeters)+` u`}"
+                android:text="@{time+` u`}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -123,6 +178,9 @@
                 android:layout_height="@dimen/attribute_icon_size"/>
             <TextView
                 android:id="@+id/tvCal"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/imgCal"
                 app:layout_constraintLeft_toRightOf="@+id/glV2"
                 app:layout_constraintRight_toLeftOf="@+id/glV3"
@@ -140,6 +198,9 @@
                 android:layout_height="@dimen/attribute_icon_size"/>
             <TextView
                 android:id="@+id/tvElevation"
+                android:textSize="12sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
                 app:layout_constraintTop_toBottomOf="@+id/imgElevation"
                 app:layout_constraintLeft_toRightOf="@+id/glV3"
                 app:layout_constraintRight_toRightOf="parent"
@@ -151,14 +212,20 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
         <TextView
             android:id="@+id/tvDescriptionTitle"
+            android:layout_marginTop="28dp"
             android:text="Description"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-<!--        android:text="@{Html.fromHtml(seeMore?attribute.description:attribute.shortDescription)}"-->
 
         <TextView
             android:id="@+id/tvDescription"
-            android:text="@{Html.fromHtml(``+(seeMore?attribute.description:attribute.shortDescription)+``)}"
+            android:layout_marginTop="8dp"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:text="@{Html.fromHtml(``+(seeMore?attribute.shortDescription:attribute.shortDescription)+``)}"
             android:maxLines="@{seeMore?1000:7}"
             android:ellipsize="end"
             android:layout_width="wrap_content"
