--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -112,12 +112,19 @@
                             android:background="@drawable/dialog_top" />
 
                         <TextView
+                            android:layout_marginTop="20dp"
                             android:id="@+id/tvRouteName"
+                            android:textColor="@color/black"
+                            android:textSize="24sp"
+                            android:textStyle="bold"
                             android:text="@{routeName}"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                         <TextView
                             android:id="@+id/tvStarRoute"
+                            android:layout_marginTop="8dp"
+                            android:textSize="16sp"
+                            android:textColor="@color/black"
                             android:text="@{startRouteName}"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
@@ -162,8 +169,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="16dp"
-                        android:layout_marginRight="16dp"
+
                         android:layout_marginBottom="12dp"
                         android:orientation="vertical"/>
 
