--- a/app/src/main/res/layout/fragment_horizontal_list.xml
+++ b/app/src/main/res/layout/fragment_horizontal_list.xml
@@ -14,13 +14,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
             android:visibility="@{title==null?View.GONE:View.VISIBLE}"
             android:text="@{title}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvItems"
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
