--- a/app/src/main/res/layout/item_poi.xml
+++ b/app/src/main/res/layout/item_poi.xml
@@ -1,21 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tool="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.text.Html"/>
+
         <variable
             name="url"
             type="String" />
+        <variable
+            name="name"
+            type="String" />
+        <variable
+            name="categoryName"
+            type="String" />
+        <variable
+            name="description"
+            type="String" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <ImageView
-            app:layout_constraintStart_toStartOf="parent"
-            android:background="@drawable/image_border"
-            app:layout_constraintTop_toTopOf="parent"
-            app:image="@{url}"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:cardCornerRadius="8dp"
+        android:paddingBottom="8dp"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:background="@drawable/image_border"
+                android:id="@+id/ivImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:image="@{url}"
+                android:scaleType="centerCrop"
+                />
+
+            <TextView
+                android:id="@+id/tvName"
+                tool:text="Name"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:text="@{name}"
+                app:layout_constraintTop_toBottomOf="@+id/ivImage"
+                app:layout_constraintStart_toStartOf="@+id/ivImage"
+                app:layout_constraintEnd_toEndOf="@+id/ivImage"
+                android:gravity="left"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tvCategory"
+                tool:text="Category"
+                android:gravity="left"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:text="@{categoryName}"
+                android:textStyle="italic"
+                app:layout_constraintTop_toBottomOf="@+id/tvName"
+                app:layout_constraintStart_toStartOf="@+id/ivImage"
+                app:layout_constraintEnd_toEndOf="@+id/ivImage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/tvDescription"
+                android:gravity="left"
+
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textSize="14sp"
+                tool:text="Description"
+                android:text="@{Html.fromHtml(description)}"
+                android:ellipsize="end"
+                android:maxLines="3"
+                android:minLines="3"
+                app:layout_constraintTop_toBottomOf="@+id/tvCategory"
+                app:layout_constraintStart_toStartOf="@+id/ivImage"
+                app:layout_constraintEnd_toEndOf="@+id/ivImage"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.cardview.widget.CardView>
 
 </layout>
